--- a/main.css
+++ b/main.css
@@ -27,9 +27,11 @@ h1 {
   width: 40%;
   margin: 2% 30%;
   margin-bottom: 0;
+  font-size: 1.2vw;
 }
 
 #primary-content {
+  font-size: 2vw;
   width: 65%;
   font-family: sans-serif;
   text-align: center;
