--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
 
 
 header {
-  border: 1px solid red;
+  border: 3px solid red;
   border-radius: 10px;
   width: 40%;
   margin: 2% 30%;
@@ -15,7 +15,7 @@ header {
 h1 {
   width: 80%;
   margin: 10px auto;
-  border:1px solid black;
+  border:2px solid darkred;
   border-radius: 10px;
   background-color: white;
   text-align: center;
@@ -33,7 +33,7 @@ h1 {
   width: 65%;
   font-family: sans-serif;
   text-align: center;
-  border: 1px solid darkgreen;
+  border: 4px solid darkgreen;
   background-color: lightgreen; 
   border-radius: 10px;
   margin: 1% auto;
@@ -66,7 +66,7 @@ textarea {
   text-align: center;
   margin: 1% auto;
   border-radius: 10px;
-  border: 1px solid black;
+  border: 3px solid darkred;
   -webkit-box-shadow: 2px 4px 10px 0px rgba(10,77,14,0.61);
   -moz-box-shadow: 2px 4px 10px 0px rgba(10,77,14,0.61);
   box-shadow: 2px 4px 10px 0px rgba(10,77,14,0.61);
