--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ h1 {
 
 .navbtn {
   font-size: 1.4vw;
+  color: #darkgreen;
   padding-top: 6px;
   border: 1px solid lightgreen;
   border-radius: 5px;
@@ -91,3 +92,35 @@ textarea {
   -moz-box-shadow: 2px 4px 10px 0px rgba(10,77,14,0.61);
   box-shadow: 2px 4px 10px 0px rgba(10,77,14,0.61);
 }
+
+.button {
+   border-top: 1px solid #f7f7f7;
+   background: #f24848;
+   background: -webkit-gradient(linear, left top, left bottom, from(#ed8080), to(#f24848));
+   background: -webkit-linear-gradient(top, #ed8080, #f24848);
+   background: -moz-linear-gradient(top, #ed8080, #f24848);
+   background: -ms-linear-gradient(top, #ed8080, #f24848);
+   background: -o-linear-gradient(top, #ed8080, #f24848);
+   padding: 5px 10px;
+   -webkit-border-radius: 8px;
+   -moz-border-radius: 8px;
+   border-radius: 8px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 14px;
+   font-family: Helvetica, Arial, Sans-Serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.button:hover {
+   border-top-color: #f28889;
+   background: #f28889;
+   color: #f0f0f0;
+   }
+.button:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
